# AI-Powered-IT-Ticket-Analyzer

./: .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json  prometheus.yml  requirements.txt  script.md
API/: .env.example  .gitignore  Dockerfile  LANGGRAPH_MIGRATION.md  MIGRATION_SUMMARY.md  QUICKSTART_LANGGRAPH.md  checklist.md  main.py  pyproject.toml  readme.md  requirements.txt  seed_db.py  start_api.py  test_api_runner.py  test_chroma_init.py  test_dynamic_system.py  ticket_system_fixes.md
API/agents/: crew_manager.py  workflow_manager.py
API/core/: config.py  models.py
API/routers/: twilio.py
API/scripts/: datasets.py  ingest_solutions.py  initialize.py  run_dev.sh  run_prod.sh  setup.py  test_installation.py
API/services/: data_service.py  knowledge_service.py  model_service.py
API/tests/: conftest.py  test_api_endpoints.py  test_env_chroma.py
API/tests/scenarios/: test_email_sync_scenario.py  test_password_reset_scenario.py  test_vpn_connectivity_scenario.py
API/utils/: database.py  ledger.py  ledger_sqlite.py  logger.py  response_formatter.py
API/weaviate/: docker-compose.yml
core/: models.py
mobile_app TicketFlow AI/: package.json
mobile_app TicketFlow AI/app/: _layout.tsx  index.tsx
mobile_app_TicketFlow AI/: app.json  package-lock.json
mobile_app_TicketFlow AI/app/: index.tsx
scripts/: initialize.py  setup.py  test_installation.py
services/: data_service.py  knowledge_service.py  model_service.py
website_ticketflow-ai/: README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
(+76 files in other folders)
