[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_ticket_api"
version = "0.1.0"
description = "AI-Powered IT Ticket Analyzer API"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
